[project]
name = "bioinformed"
readme = "README.md"

[build-system]
build-backend = "mesonpy"
# Minimum requirements for the build system to execute.
requires =  = [
  "meson-python>=0.16.0",
  "Cython>=3.0.10",
  "numpy>=1.19.5",
  "scipy>=1.6.0",
  "joblib>=1.2.0",
  "threadpoolctl>=3.1.0",
]
requires-python = ">=3.9"
