[build-system]
requires = ["setuptools >= 74.0.1", "wheel", "Cython", "numpy>=1.19.5", "scikit-learn"]
build-backend = "setuptools.build_meta"

[project]
name = "pktree"
version = "0.1.0"
dependencies = [
    "Cython>=3.0.10",
    "numpy>=1.19.5",
    "scipy>=1.6.0",
    "joblib>=1.2.0",
    "threadpoolctl>=3.1.0",
    "scikit-learn"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["pktree", "pktree.tree", "pktree.ensemble", "pktree.ensemble._hist_gradient_boosting"]
#ext-modules = [
#    {name = "pktree.hello", sources = ["pktree/hello.pyx"]},
#    {name = "pktree.tree._criterion", sources = ["pktree/tree/_criterion.pyx"], include-dirs=["numpy.get_include()"]},
#    {name = "pktree.tree._partitioner", sources = ["pktree/tree/_partitioner.pyx"]},
#    {name = "pktree.tree._splitter", sources = ["pktree/tree/_splitter.pyx"]},
#    {name = "pktree.tree._tree", sources = ["pktree/tree/_tree.pyx"]},
#   {name = "pktree.tree._utils", sources = ["pktree/tree/_utils.pyx"]},
#]

